--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,14 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  SQL_test:
+  db_test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      DB_HOSTNAME: localhost
+      DB_USER: root
+      DB_PASSWORD: root
+      DB_DATABASE: testdb
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -32,7 +37,20 @@ jobs:
         
       - name: Create Database
         run: mysql -u root -p"root" -e "CREATE DATABASE testdb DEFAULT CHARACTER SET utf8;"
+        
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      
+      - name: Install Node deps
+        run: npm ci
+        
+      - name: Run the DB migration script
+        run: npm run migrate
+        
+      - name: Run the DB seeder script
+        run: npm run seed
 
       # Runs a single command using the runners shell
-      - name: Run the SQL script
-        run: mysql -u root -p"root" testdb < './sql/museo_taquilla.schema.sql'
+      # - name: Run the SQL script
+      #   run: mysql -u root -p"root" testdb < './sql/museo_taquilla.schema.sql'
