--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-http-proxy": "^1.6.3",
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
     "jest": "^27.4.5",
+    "parallelshell": "^3.0.2",
     "supertest": "^6.1.6"
   }
 }
