--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,20 @@ jobs:
       - name: Run the DB seeder script
         run: npm run seed
 
-      # Runs a single command using the runners shell
-      # - name: Run the SQL script
-      #   run: mysql -u root -p"root" testdb < './sql/museo_taquilla.schema.sql'
+  services_tests:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - uses: actions/checkout@v2
+        
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      
+      - name: Install Node deps
+        run: npm ci
+        
+      - name: Run tests
+        run: npm run test
