--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,11 @@ jobs:
   services_tests:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      DB_HOSTNAME: localhost
+      DB_USER: root
+      DB_PASSWORD: root
+      DB_DATABASE: testdb
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
