--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,40 +50,37 @@ jobs:
         
       - name: Run the DB seeder script
         run: npm run seed
+
+  services_tests:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    env:
+      DB_HOSTNAME: localhost
+      DB_USER: root
+      DB_PASSWORD: root
+      DB_DATABASE: testdb
+    
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - uses: actions/checkout@v2
+          
+      - name: Start MySQL
+        run: sudo systemctl start mysql
+        
+      - name: Wait for MySQL
+        run: sleep 5
+        
+      - name: Create Database
+        run: mysql -u root -p"root" -e "CREATE DATABASE testdb DEFAULT CHARACTER SET utf8;"
+        
+      - uses: actions/checkout@v2
+        
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      
+      - name: Install Node deps
+        run: npm ci
         
       - name: Run tests
-        run: npm run test
-
-#   services_tests:
-#     # The type of runner that the job will run on
-#     runs-on: ubuntu-latest
-#     env:
-#       DB_HOSTNAME: localhost
-#       DB_USER: root
-#       DB_PASSWORD: root
-#       DB_DATABASE: testdb
-    
-#     # Steps represent a sequence of tasks that will be executed as part of the job
-#     steps:
-#       - uses: actions/checkout@v2
-          
-#       - name: Start MySQL
-#         run: sudo systemctl start mysql
-        
-#       - name: Wait for MySQL
-#         run: sleep 5
-        
-#       - name: Create Database
-#         run: mysql -u root -p"root" -e "CREATE DATABASE testdb DEFAULT CHARACTER SET utf8;"
-        
-#       - uses: actions/checkout@v2
-        
-#       - uses: actions/setup-node@v2
-#         with:
-#           node-version: '14'
-      
-#       - name: Install Node deps
-#         run: npm ci
-        
-#       - name: Run tests
-#         run: npm run test
+        run: npm run test -- --forceExit
