--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "migrate": "node ./db/migrate",
     "seed": "node ./db/seed",
     "test": "jest --config ./jest.config.js",
+    "heroku": "serve",
     "serve": "shell-exec \"npm run serve-api\" \"npm run serve-users\" \"npm run serve-carts\"",
     "serve-api": "node ./APIGateway",
     "serve-users": "node ./UsuariosRepositorio",
