Feat: UsuariosRepositorio user logout endpoint

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "shell-executor": "^6.0.1"
+    "shell-executor": "^6.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "jest": "^27.4.5",
