--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "seed": "node ./db/seed",
     "test": "jest --config ./jest.config.js",
     "heroku": "serve",
-    "serve": "shell-exec \"npm run serve-api\" \"npm run serve-users\" \"npm run serve-carts\"",
+    "serve": "shell-exec \"npm run serve-api\" \"npm run serve-users\" \"npm run serve-carts\" \"npm run serve-exhibitions\"",
     "serve-api": "node ./APIGateway",
     "serve-users": "node ./UsuariosRepositorio",
     "serve-carts": "node ./PedidosRepositorio",
-    "watch": "shell-exec \"npm run watch-api\" \"npm run watch-users\" \"npm run watch-carts\"",
+    "serve-exhibitions": "node ./ExhibicionesRepositorio",
+    "watch": "shell-exec \"npm run watch-api\" \"npm run watch-users\" \"npm run watch-carts\" \"npm run watch-exhibitions\"",
     "watch-api": "nodemon ./APIGateway",
     "watch-users": "nodemon ./UsuariosRepositorio",
-    "watch-carts": "nodemon ./PedidosRepositorio"
+    "watch-carts": "nodemon ./PedidosRepositorio",
+    "watch-exhibitions": "nodemon ./ExhibicionesRepositorio"
   },
   "repository": {
     "type": "git",
