promociones puesto en port 7000

--- a/APIGateway/.env.example
+++ b/APIGateway/.env.example
@@ -1,5 +1,5 @@
 EXHIBICIONES_SERVICE_URL=localhost:5000
 USERS_SERVICE_URL=localhost:4000
 
-
+PROMOCIONES_SERVICE_URL=localhost:7000
 CARTS_SERVICE_URL=localhost:6000
