fix: add promos API to `serve` and `watch` commands

--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "seed": "node ./db/seed",
     "test": "jest --config ./jest.config.js",
     "heroku": "serve",
-    "serve": "shell-exec \"npm run serve-api\" \"npm run serve-users\" \"npm run serve-carts\" \"npm run serve-exhibitions\"",
+    "serve": "shell-exec \"npm run serve-api\" \"npm run serve-users\" \"npm run serve-carts\" \"npm run serve-exhibitions\" \"npm run serve-promos\"",
     "serve-api": "node ./APIGateway",
     "serve-users": "node ./UsuariosRepositorio",
     "serve-carts": "node ./PedidosRepositorio",
+    "serve-promos": "node ./PromocionesRepositorio",
     "serve-exhibitions": "node ./ExhibicionesRepositorio",
-    "watch": "shell-exec \"npm run watch-api\" \"npm run watch-users\" \"npm run watch-carts\" \"npm run watch-exhibitions\"",
+    "watch": "shell-exec \"npm run watch-api\" \"npm run watch-users\" \"npm run watch-carts\" \"npm run watch-exhibitions\" \"npm run watch-promos\"",
     "watch-api": "nodemon ./APIGateway",
     "watch-users": "nodemon ./UsuariosRepositorio",
     "watch-carts": "nodemon ./PedidosRepositorio",
+    "watch-promos": "node ./PromocionesRepositorio",
     "watch-exhibitions": "nodemon ./ExhibicionesRepositorio"
   },
   "repository": {
